# opencopilot-python-sdk

./: .fernignore  README.md  pyproject.toml  requirements.txt  setup.py
src/open-copilot/: __init__.py  client.py
src/open-copilot/core/: client_wrapper.py
src/open-copilot/resources/: __init__.py
src/open-copilot/resources/chat/: client.py
src/open-copilot/resources/copilot/: __init__.py  client.py
src/open-copilot/resources/copilot/types/: __init__.py  chatbot.py  chatbot_status.py
